[package]
name = "nm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
zip = "0.6.6"

[profile.release]
lto=true
codegen-units=1
panic="abort"
strip=true

